--- a/webapp/assets/css/jblog.css
+++ b/webapp/assets/css/jblog.css
@@ -31,16 +31,29 @@ a:hover 		{ color:#dc143c; text-decoration:none; font-weight:bold; }
 .login-form input, .login-form label			{ display:block }
 .login-form label								{ text-align:left; color:#555; margin-bottom:2px; font-weight:bold; }
 .login-form input[type='text']					{ margin-bottom:10px; width:230px; padding:5px }
+.login-form input[type='submit']				{  background-image:url(/jblog/assets/images/templogin.png);
+															border:none;
+															text-indent:10000px;
+															width: 55px;
+															height: 20px;
+															margin:10px auto;
+															cursor:pointer;}
 
 .join-form										{ text-align:left; width:250px; padding:10px; border:1px solid #bbb; }
 .join-form label, .join-form fieldset legend	{ color:#555; margin-bottom:2px; font-weight:bold; }
 .join-form .block-label 						{ display:block }
 .join-form label, .join-form fieldset			{ margin:10px 0 5px 0 }
 
-.join-form input[type="submit"]					{ display:block; width:80px; margin:20px auto }
+div .join-form input[type='submit']		{ background-image:url(/jblog/assets/images/templogin.png);
+															border:none;
+															text-indent:10000px;
+															width: 55px;
+															height: 20px;
+															margin:10px auto;
+															cursor:pointer;}
 
 .welcome-message								{ height: 200px }
-.welcome-message span							{ font-size:1.2em; font-wight:bold; color:#777 }
+.welcome-message span							{ font-size:1.2em; font-weight:bold; color:#777 }
 .welcome-message span:before					{ content: url(/jblog/assets/images/bul1.gif);}
 .welcome-message span:after						{ content: url(/jblog/assets/images/bul2.gif);}		
 
