--- a/webapp/assets/css/jblog.css
+++ b/webapp/assets/css/jblog.css
@@ -14,7 +14,8 @@ a:hover 		{ color:#dc143c; text-decoration:none; font-weight:bold; }
 
 .center-content	{ width:500px; margin:120px auto 50px auto}
 
-.center-content .logo							{ width:116px; height:67px; background:url(/jblog/assets/images/logo.jpg) 0 0 no-repeat; margin:20px auto; text-indent:-100000px; font-size:0 }
+.center-content .logo							{ width:400px; height:300px; background:url(/jblog/assets/images/logo2.jpg); margin:20px auto; 
+														text-indent:-100000px; font-size:0; border-style:dotted; border-radius:10px; }
 .center-content .menu							{ text-align:center; height:20px; margin:0 auto }
 .center-content .menu li						{ display:inline; padding-left:20px }
 .center-content .menu li:first-child			{ margin!-left:70px }
